syntax = "proto3";

package conway;

import "conway/structure_properties.proto";

message StructureLookup {
  repeated conway.StructureProperties table = 1;
}